Final updates to markdown document

--- a/repdata_report.Rmd
+++ b/repdata_report.Rmd
@@ -10,14 +10,14 @@ output:
  
 
 #Synopsis
-This report looks to provide insight into which type of weather events have the greatest impact on population health and the economy.  Health impact will be defined the sum of fatalities and injuries.  Economy impact is defined as the sum of property and crop damage in billions of dollars.
+This report looks to provide insight into which type of weather events have the greatest impact on population health and the economy.  Health impact will be defined as the sum of fatalities and injuries.  Economic impact will be defined as the sum of property and crop damage in billions of dollars.  The goal is to provide an overall impact for both pieces.
 
-This analysis is based on U.S. National Oceanic and Atmospheric Administration's (NOAA) storm database.  From the analysis we found that TORNADO have the biggest impact on population health and FLOOD on economy.
+This analysis is based on the U.S. National Oceanic and Atmospheric Administration's (NOAA) storm database.  From the analysis we found that TORNADOs have the biggest impact on population health and FLOOD on economy.
 
 
 
 #Data Processing
-This section outlines the steps used for preparing the data.  First I reference the necessary R packages.
+This section outlines the steps used for preparing the data.  First I referenced the necessary R packages.
 ```{r Packages, warning=FALSE}
 #reference packages used in the analysis
 library(downloader)
@@ -70,7 +70,8 @@ step1<-rawdata[,keepvar]
 ```
 
 
-The Event Type in the data 985 unique values.  In order to make things easier, I took the 985 types and mapped them to 47 and put them in a .csv file to use to translate the original raw data.
+The event types in the data have 985 unique values.  In order to make things easier (spelling, similar event types, upper/lower case, etc), I took the 985 types and mapped them to 47 and put them in a .csv file to use to translate the original raw data.
+
 ```{r eventtypes}
 #execute unique command to identify translations to build
 unique(rawdata$EVTYPE)
@@ -78,7 +79,7 @@ unique(rawdata$EVTYPE)
 ```
 
 
-Here I read in the translation table and merge it against the variable subsetted rawdata.
+Here I read in the translation table and merge it against the variable subsetted rawdata.  This translation file can be found at https://github.com/AaronAugustine/RepData_PeerAssessment2.
 ```{r translations}
 #Read in EVTYPE translation file
 trans <- read.csv("EVTYPEtranslations3.csv",
@@ -97,7 +98,7 @@ step2 <- merge(step1,trans,
 ```
 
 
-The analysis also requires an analysis of property and crop damage.  To do this we need to convert the multiplication indicators from "K", "M", "B", etc. to 1000, 1000000, 1000000000.  To do this I pulled out the unique values and then mapped the values.
+The analysis also requires the impact of property and crop damage.  To do this we need to convert the multiplication indicators from "K", "M", "B", etc. to 1000, 1000000, 1000000000.  To do this I pulled out the unique values and then mapped them as needed.
 ```{r indicators}
 
 unique(rawdata$PROPDMGEXP)
@@ -121,14 +122,14 @@ step2$CROPTOTALDMG <- as.numeric(tempCROPDMG) * step2$CROPDMG
 ```
 
 
-In order to provide an overall view of the impact on people I combined fatalities and in juries in as total impact on people in 1000's.  Similarly for the impact on the economy, I did the same for property and crops into damage in billions.
+In order to provide an overall view of the impact on people I combined fatalities and injuries as a total impact on people in 1000's.  Similarly for the impact on the economy, I did the same for property and crops into damage in billions.
 ```{r combinevars}
 step2$people <- (step2$FATALITIES + step2$INJURIES)/1000
 step2$damage <- (step2$PROPTOTALDMG + step2$CROPTOTALDMG)/1000000000
 ```
 
 
-Lastly I summarized the impact of people and the economy across the entire data set rounding the results to one decimal place.
+Lastly, I summarized the impact of people and the economy across the entire data and rounded the results to one decimal place.
 ```{r summarize}
 step3<-ddply(step2,c("NEW"),
                      summarize,
@@ -170,7 +171,7 @@ p
 ```
 
 
-In the figure below, FLOOD has the biggest economic impact.  Double the next closest type HURRICANE.
+In the figure below, FLOOD has the biggest economic impact.  Double the next closest type, HURRICANE.
 ```{r plot2}
 q<-ggplot(chart2, aes(x = reorder(NEW,-damage), y = damage)) + 
     geom_bar(stat = "identity") +
